--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "My App",
-  "short_name": "My App",
-  "description": "My App description",
+  "name": "nine2five.catering",
+  "short_name": "nine2five",
+  "description": "Hassle-free corporate catering.",
   "start_url": "/",
   "display": "standalone",
-  "theme_color": "#3f51b5",
-  "background_color": "#3f51b5",
+  "theme_color": "#d50000",
+  "background_color": "#d50000",
   "icons": [
     {
       "src": "images/manifest/icon-192x192.png",
