--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:regenerate_screenshots": "mocha test/integration/screenshots-baseline/regenerate.js --timeout=15000"
   },
   "dependencies": {
+    "@material/dialog": "^0.40.0",
     "@material/mwc-button": "^0.2.1",
     "@material/mwc-fab": "^0.2.1",
     "@material/mwc-icon": "^0.2.1",
@@ -27,7 +28,9 @@
     "@polymer/lit-element": "^0.6.1",
     "@polymer/polymer": "^3.0.0",
     "@webcomponents/webcomponentsjs": "^2.0.0",
-    "pwa-helpers": "^0.8.2"
+    "blocking-elements": "0.0.2",
+    "pwa-helpers": "^0.8.2",
+    "wicg-inert": "^2.0.0"
   },
   "devDependencies": {
     "axe-core": "^3.0.0",
