--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "@material/mwc-button": "^0.2.1",
     "@material/mwc-fab": "^0.2.1",
     "@material/mwc-icon": "^0.2.1",
+    "@material/rtl": "^0.39.1",
+    "@material/textfield": "^0.40.0",
+    "@material/theme": "^0.40.0",
+    "@material/typography": "^0.39.0",
     "@polymer/app-layout": "^3.0.0",
     "@polymer/lit-element": "^0.6.1",
     "@polymer/polymer": "^3.0.0",
