--- a/package.json
+++ b/package.json
@@ -22,20 +22,20 @@
   },
   "dependencies": {
     "@material/dialog": "^0.40.0",
-    "@material/mwc-button": "^0.2.1",
     "@material/mwc-fab": "^0.2.1",
     "@material/mwc-icon": "^0.2.1",
     "@material/rtl": "^0.39.1",
-    "@material/textfield": "^0.40.0",
     "@material/theme": "^0.40.0",
     "@material/typography": "^0.39.0",
     "@polymer/app-layout": "^3.0.0",
     "@polymer/lit-element": "^0.6.1",
     "@polymer/polymer": "^3.0.0",
     "@webcomponents/webcomponentsjs": "^2.0.0",
-    "blocking-elements": "0.0.2",
-    "pwa-helpers": "^0.8.2",
-    "wicg-inert": "^2.0.0"
+    "pwa-helpers": "^0.8.2"
+  },
+  "optionalDependencies": {
+    "@material/mwc-button": "^0.2.1",
+    "@material/textfield": "^0.40.0"
   },
   "devDependencies": {
     "axe-core": "^3.0.0",
