--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@material/dialog": "^0.40.0",
     "@material/line-ripple": "^0.40.1",
+    "@material/floating-label": "^0.40.1",
     "@material/mwc-fab": "^0.2.1",
     "@material/mwc-icon": "^0.2.1",
     "@material/rtl": "^0.39.1",
