--- a/package.json
+++ b/package.json
@@ -21,28 +21,29 @@
     "test:regenerate_screenshots": "mocha test/integration/screenshots-baseline/regenerate.js --timeout=15000"
   },
   "dependencies": {
-    "@material/mwc-icon": "^0.2.1",
-    "@material/mwc-fab": "^0.2.1",
-    "@material/mwc-button": "^0.2.1",
+    "@material/animation": "^0.39.0",
+    "@material/base": "^0.39.0",
     "@material/dialog": "^0.40.0",
+    "@material/floating-label": "^0.40.1",
+    "@material/line-ripple": "^0.40.1",
+    "@material/mwc-button": "^0.2.1",
+    "@material/mwc-fab": "^0.2.1",
+    "@material/mwc-icon": "^0.2.1",
+    "@material/notched-outline": "^0.40.0",
+    "@material/ripple": "^0.40.0",
+    "@material/rtl": "^0.39.1",
+    "@material/shape": "^0.40.0",
     "@material/textfield": "^0.40.0",
+    "@material/theme": "^0.40.0",
+    "@material/typography": "^0.39.0",
     "@polymer/app-layout": "^3.0.0",
     "@polymer/lit-element": "^0.6.1",
     "@polymer/polymer": "^3.0.0",
     "@webcomponents/webcomponentsjs": "^2.0.0",
-    "pwa-helpers": "^0.8.2",
     "blocking-elements": "0.0.2",
-    "wicg-inert": "^2.0.0",
-    "@material/floating-label": "^0.40.1",
-    "@material/typography": "^0.39.0",
-    "@material/line-ripple": "^0.40.1",
-    "@material/theme": "^0.40.0",
-    "@material/rtl": "^0.39.1",
-    "@material/animation": "^0.39.0",
-    "@material/base": "^0.39.0",
-    "@material/notched-outline": "^0.40.0",
-    "@material/ripple": "^0.40.0",
-    "@material/shape": "^0.40.0"
+    "load-google-maps-api": "^1.3.2",
+    "pwa-helpers": "^0.8.2",
+    "wicg-inert": "^2.0.0"
   },
   "devDependencies": {
     "axe-core": "^3.0.0",
