--- a/package.json
+++ b/package.json
@@ -21,16 +21,14 @@
     "test:regenerate_screenshots": "mocha test/integration/screenshots-baseline/regenerate.js --timeout=15000"
   },
   "dependencies": {
-    "@material/mwc-button": "^0.2.1",
-    "@material/mwc-fab": "^0.2.1",
+    "@material/mwc-button": "^0.3.5",
+    "@material/mwc-fab": "^0.3.5",
     "@polymer/app-layout": "^3.0.0",
     "@polymer/polymer": "^3.0.0",
     "@webcomponents/webcomponentsjs": "^2.0.0",
-    "blocking-elements": "0.0.2",
     "lit-element": "^2.0.0-rc.2",
     "load-google-maps-api": "^1.3.2",
-    "pwa-helpers": "^0.8.2",
-    "wicg-inert": "^2.0.0"
+    "pwa-helpers": "^0.8.2"
   },
   "devDependencies": {
     "axe-core": "^3.0.0",
